--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,6 +29,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
+file.reference.sqljdbc4.jar=web\\WEB-INF\\lib\\sqljdbc4.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -39,7 +40,8 @@ j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
     ${libs.jaxb.classpath}:\
-    ${libs.eclipselink.classpath}
+    ${libs.eclipselink.classpath}:\
+    ${file.reference.sqljdbc4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
