--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,7 +29,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
-file.reference.sqljdbc4.jar=web\\WEB-INF\\lib\\sqljdbc4.jar
+file.reference.sqljdbc4.jar=web/WEB-INF/lib/sqljdbc4.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -87,6 +87,6 @@ src.dir=${source.root}/java
 test.src.dir=test
 war.content.additional=
 war.ear.name=${war.name}
-war.name=TPGamingGear.war
+war.name=NTPGamingGear.war
 web.docbase.dir=web
 webinf.dir=web/WEB-INF
