--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app version="3.0" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd">
+    <listener>
+        <description>RequestListener</description>
+        <listener-class>listener.MyRequestServletListener</listener-class>
+    </listener>
     <servlet>
         <servlet-name>ProcessServlet</servlet-name>
         <servlet-class>servlet.ProcessServlet</servlet-class>
