--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -20,4 +20,12 @@
     <welcome-file-list>
         <welcome-file>ProcessServlet</welcome-file>
     </welcome-file-list>
+    <error-page>
+        <error-code>500</error-code>
+        <location>/error.html</location>
+    </error-page>
+    <error-page>
+        <error-code>404</error-code>
+        <location>/error.html</location>
+    </error-page>
 </web-app>
