--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,6 +29,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
+file.reference.fop-1.1.jar=web\\WEB-INF\\lib\\fop-1.1.jar
 file.reference.sqljdbc4.jar=web/WEB-INF/lib/sqljdbc4.jar
 includes=**
 j2ee.compile.on.save=true
@@ -42,7 +43,8 @@ javac.classpath=\
     ${libs.jaxb.classpath}:\
     ${libs.eclipselink.classpath}:\
     ${file.reference.sqljdbc4.jar}:\
-    ${libs.jstl.classpath}
+    ${libs.jstl.classpath}:\
+    ${file.reference.fop-1.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
