--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,8 +29,18 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
-file.reference.fop-1.1.jar=web\\WEB-INF\\lib\\fop-1.1.jar
+file.reference.avalon-framework-4.2.0.jar=D:\\Study\\Resource FPT\\Semester8\\XML\\fop-1.0\\lib\\avalon-framework-4.2.0.jar
+file.reference.batik-all-1.7.jar=D:\\Study\\Resource FPT\\Semester8\\XML\\fop-1.0\\lib\\batik-all-1.7.jar
+file.reference.commons-io-1.3.1.jar=D:\\Study\\Resource FPT\\Semester8\\XML\\fop-1.0\\lib\\commons-io-1.3.1.jar
+file.reference.commons-logging-1.0.4.jar=D:\\Study\\Resource FPT\\Semester8\\XML\\fop-1.0\\lib\\commons-logging-1.0.4.jar
+file.reference.fop.jar=D:\\Study\\Resource FPT\\Semester8\\XML\\fop-1.0\\build\\fop.jar
+file.reference.serializer-2.7.0.jar=D:\\Study\\Resource FPT\\Semester8\\XML\\fop-1.0\\lib\\serializer-2.7.0.jar
 file.reference.sqljdbc4.jar=web/WEB-INF/lib/sqljdbc4.jar
+file.reference.xalan-2.7.0.jar=D:\\Study\\Resource FPT\\Semester8\\XML\\fop-1.0\\lib\\xalan-2.7.0.jar
+file.reference.xercesImpl-2.7.1.jar=D:\\Study\\Resource FPT\\Semester8\\XML\\fop-1.0\\lib\\xercesImpl-2.7.1.jar
+file.reference.xml-apis-1.3.04.jar=D:\\Study\\Resource FPT\\Semester8\\XML\\fop-1.0\\lib\\xml-apis-1.3.04.jar
+file.reference.xml-apis-ext-1.3.04.jar=D:\\Study\\Resource FPT\\Semester8\\XML\\fop-1.0\\lib\\xml-apis-ext-1.3.04.jar
+file.reference.xmlgraphics-commons-1.4.jar=D:\\Study\\Resource FPT\\Semester8\\XML\\fop-1.0\\lib\\xmlgraphics-commons-1.4.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -44,7 +54,17 @@ javac.classpath=\
     ${libs.eclipselink.classpath}:\
     ${file.reference.sqljdbc4.jar}:\
     ${libs.jstl.classpath}:\
-    ${file.reference.fop-1.1.jar}
+    ${file.reference.fop.jar}:\
+    ${file.reference.xmlgraphics-commons-1.4.jar}:\
+    ${file.reference.avalon-framework-4.2.0.jar}:\
+    ${file.reference.batik-all-1.7.jar}:\
+    ${file.reference.commons-io-1.3.1.jar}:\
+    ${file.reference.commons-logging-1.0.4.jar}:\
+    ${file.reference.serializer-2.7.0.jar}:\
+    ${file.reference.xalan-2.7.0.jar}:\
+    ${file.reference.xercesImpl-2.7.1.jar}:\
+    ${file.reference.xml-apis-1.3.04.jar}:\
+    ${file.reference.xml-apis-ext-1.3.04.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
